# aegis

./: .env.example  .gitignore  BUILD_STATUS.md  COMPARISON.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  hermes_bootstrap.py  install.ps1  install.sh  mkdocs.yml  package.json  pyproject.toml  setup-hermes.sh  setup.py  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  setup_help.yml
.github/workflows/: ci.yml  release.yml
aegis/: __init__.py  _locks.py  _log.py  _strict.py  ab.py  acp.py  activity.py  ambient.py  automation.py  auxiliary.py  background.py  backup.py  bench.py  bootstrap.py  browser_connect.py  checkpoints.py  config.py  constants.py  context_refs.py  credentials.py  cron.py  curator.py  daemon.py  dashboard.py  dashboard_fastapi.py  dashboard_pty.py  desktop.py  display_config.py  doctor.py  evals.py  eventbus.py  firstrun.py  goals.py  governor.py  gstack.py  handoff.py  hooks.py  insights.py  install_surfaces.py  kanban.py  (+43 more)
aegis/agent/: __init__.py  agent.py  coding_context.py  compaction.py  compaction_runner.py  context.py  context_engine.py  events.py  governance.py  guardrails.py  invalid_tool_calls.py  loop.py  oneshot.py  process_bootstrap.py  request_wire.py  response_normalization.py  review.py  runtime_readiness.py  streaming_think_scrubber.py  subdir_hints.py  verification.py  wakeups.py
aegis/cli/: __init__.py  codex_runtime_plugin_migration.py  fullscreen.py  main.py  menu.py  project_cmd.py  repl.py  tui.py  tui_ink.py
aegis/dashboard_routes/: __init__.py  appearance.py  config_profiles.py  cron_jobs.py  fallback.py  file_browser.py  gateway_compat.py  gateway_messaging.py  misc.py  model_analytics.py  sessions.py  skills_plugins.py  static_auth.py  tools_mcp.py
aegis/desktop_app/: launch.js  main.js  package-lock.json  package.json
aegis/gateway/: __init__.py  base.py  channels.py  discord_channel.py  email_channel.py  idempotency.py  matrix_channel.py  mattermost_channel.py  memory_monitor.py  message_timestamps.py  ntfy_channel.py  pairing.py  queue.py  replies.py  runner.py  service.py  signal_channel.py  slack_channel.py  status.py  webhook_channel.py
aegis/lsp/: __init__.py  client.py  install.py  range_shift.py  servers.py  service.py  workspace.py
aegis/mcp/: __init__.py  aegis_tools_mcp_server.py  client.py  oauth_manager.py  server.py  startup.py
aegis/providers/: __init__.py  anthropic.py  auth.py  base.py  chat_completions.py  codex_app_server.py  codex_runtime_migration.py  fallback.py  registry.py  responses.py  schema.py
aegis/static/: dashboard.html
aegis/tools/: __init__.py  agentic.py  async_bridge.py  aux_tools.py  backends.py  base.py  browser.py  builtin.py  cloud.py  code_exec.py  code_search_tool.py  command_utils.py  cronjob_tool.py  devtools.py  extra_builtin.py  file_safety.py  file_state.py  fuzzy.py  integrations.py  interrupt.py  kanban_tool.py  lsp.py  permissions.py  process.py  process_registry.py  project_tools.py  recall.py  registry.py  repomap_tool.py  schema_validation.py  (+6 more)
agent/: __init__.py  process_bootstrap.py
apps/bootstrap-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/bootstrap-installer/src-tauri/capabilities/: default.json
apps/bootstrap-installer/src-tauri/src/: bootstrap.rs  events.rs  install_script.rs  lib.rs  main.rs  paths.rs  powershell.rs  update.rs
assets/: onepager.html
desktop/: README.md  main.js  package-lock.json  package.json
docs/: DASHBOARD_INTERNAL_MAP.md  aegis-code-map.csv  aegis-parity-ledger.csv  aegis-reference-clean-rewrite.md  api-routes.md  architecture.md  cli-reference.md  cli.md  dashboard.md  desktop.md  feature-parity-matrix.md  full-repo-audit.md  gateway.md  hermes-aegis-full-audit-2026-06-13.md  hermes-aegis-overhaul-2026-06-13.md  hermes-code-map.csv  hermes-parity-ledger.csv  index.md  install.md  live-qa-matrix.md  maturity.md  mcp.md  memory-skills.md  operations-contracts.md  plugins.md  production-harness-plan.md  providers.md  quickstart.md  sdk.md  security.md  serve.md  slash-commands.md  tools-reference.md  tools.md  tracing-evals.md
examples/: config.example.yaml  plugin_hello.py
hermes_cli/: __init__.py  _compat.py  cli_agent_setup_mixin.py  gui_uninstall.py  memory_setup.py  model_setup_flows.py  setup.py  setup_whatsapp_cloud.py  uninstall.py
scripts/: audit_reference_compare.py  build_tui.sh  build_web.sh  check_aegis_parity_ledger.py  check_hermes_parity_ledger.py  check_web_dist.sh  gen_terminal_screenshot.py  generate_aegis_code_map.py  generate_hermes_code_map.py  generate_reference_docs.py  install.cmd  install.ps1  install.sh  install_psutil_android.py  release_provenance.py  run_tests.sh  setup_open_webui.sh  verify_all.sh  verify_e2e.py
setup/: bootstrap.py  postinstall.py  setup-whatsapp-cloud.py  uninstall.py  update.py
site-next/: package-lock.json  package.json
tests/: _dashboard_server.py  conftest.py  test_ab.py  test_acp.py  test_agent_init_prompt_controls.py  test_agent_perms.py  test_agentic_upgrades.py  test_ambient.py  test_auth_cli.py  test_automation.py  test_automation_skill.py  test_bench.py  test_bootstrap.py  test_chat_attach.py  test_chat_detach.py  test_checkpoint_cli_stage_l.py  test_checkpoint_depth.py  test_checkpoint_policy_stage_l.py  test_claw_cli.py  test_cli_slash_dispatch.py  test_codex_app_server_parity.py  test_codex_runtime_mcp_callback_migration.py  test_coding_context.py  test_compaction_boundaries.py  test_compaction_curator_parity.py  test_compaction_quality.py  test_compaction_stage_n.py  test_completion_cli.py  test_computer_use_cli.py  test_config_cli.py  test_context_command.py  test_context_engine_parity.py  test_continuation_stage_p.py  test_cost_pricing.py  test_credential_pools.py  test_cron_cli.py  test_cronjob_tool.py  test_dashboard_config_ops.py  test_dashboard_editing.py  test_dashboard_fastapi.py  (+181 more)
ui-tui/: package.json
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
website/: package.json
(+907 files in other folders)
