[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-agent"
version = "0.1.0"
description = "AEGIS — a self-improving, multi-provider, multi-channel terminal agent harness (Hermes + OpenClaw, in Python)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AEGIS" }]
keywords = ["agent", "llm", "cli", "ai", "claude", "openai", "harness", "tools", "skills"]

dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
browser = ["playwright>=1.46"]
computer = ["pyautogui>=0.9.54", "Pillow>=10"]
discord = ["discord.py>=2.4"]
slack = ["slack_bolt>=1.21"]
matrix = ["matrix-nio>=0.24"]
honcho = ["honcho-ai>=1.0"]
mem0 = ["mem0ai>=0.1"]
memory = ["honcho-ai>=1.0", "mem0ai>=0.1"]
all = [
    "playwright>=1.46", "pyautogui>=0.9.54", "Pillow>=10", "discord.py>=2.4",
    "slack_bolt>=1.21", "matrix-nio>=0.24", "honcho-ai>=1.0", "mem0ai>=0.1",
]

[project.scripts]
aegis = "aegis.cli.main:main"

[tool.setuptools.packages.find]
include = ["aegis*"]

[tool.setuptools.package-data]
aegis = ["builtin_skills/**/*"]
