[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-agent-harness"
version = "0.1.0"
description = "AEGIS — a self-improving, multi-provider, multi-channel terminal agent harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AEGIS" }]
keywords = ["agent", "llm", "cli", "ai", "claude", "openai", "harness", "tools", "skills"]

# Upper-bound ceilings on every dependency (supply-chain hygiene, post-litellm policy):
# post-1.0 packages pin <next_major; pre-1.0 packages allow a couple of minors.
dependencies = [
    "httpx>=0.27,<0.30",
    "pyyaml>=6.0,<7",
    "prompt_toolkit>=3.0,<4",
    "rich>=13.0,<16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]
browser = ["playwright>=1.46,<2"]
computer = ["pyautogui>=0.9.54,<1", "Pillow>=10,<12"]
discord = ["discord.py>=2.4,<3"]
slack = ["slack_bolt>=1.21,<2"]
matrix = ["matrix-nio>=0.24,<0.26"]
honcho = ["honcho-ai>=1.0,<2"]
mem0 = ["mem0ai>=0.1,<0.3"]
memory = ["honcho-ai>=1.0,<2", "mem0ai>=0.1,<0.3"]
tokenizer = ["tiktoken>=0.7,<1"]
all = [
    "playwright>=1.46,<2", "pyautogui>=0.9.54,<1", "Pillow>=10,<12", "discord.py>=2.4,<3",
    "slack_bolt>=1.21,<2", "matrix-nio>=0.24,<0.26", "honcho-ai>=1.0,<2", "mem0ai>=0.1,<0.3",
    "tiktoken>=0.7,<1",
]

[project.scripts]
aegis = "aegis.cli.main:main"

[tool.setuptools.packages.find]
include = ["aegis*"]

[tool.setuptools.package-data]
aegis = ["builtin_skills/**/*", "static/*"]
