[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-agent-harness"
version = "0.1.0"
description = "AEGIS — a self-improving, multi-provider, multi-channel terminal agent harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AEGIS" }]
keywords = ["agent", "llm", "cli", "ai", "claude", "openai", "harness", "tools", "skills"]

# Upper-bound ceilings on every dependency (supply-chain hygiene, post-litellm policy):
# post-1.0 packages pin <next_major; pre-1.0 packages allow a couple of minors.
dependencies = [
    "aiohttp>=3.9,<4",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<0.30",
    "ptyprocess>=0.7,<1; sys_platform != 'win32'",
    "python-multipart>=0.0.9,<1",
    "pyyaml>=6.0,<7",
    "prompt_toolkit>=3.0,<4",
    "rich>=13.0,<16",
    "uvicorn[standard]>=0.30,<1",
    # Pulled transitively by uvicorn[standard]; pinned explicitly so a future major that
    # drops the deprecated `websockets.legacy` API uvicorn still imports can't land silently.
    "websockets>=12,<17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "ruff>=0.8,<1"]
browser = ["playwright>=1.46,<2"]
computer = ["pyautogui>=0.9.54,<1", "Pillow>=10,<12"]
computer-use = ["pyautogui>=0.9.54,<1", "Pillow>=10,<12"]
discord = ["discord.py>=2.4,<3"]
slack = ["slack_bolt>=1.21,<2"]
matrix = ["matrix-nio>=0.24,<0.26"]
messaging = ["discord.py>=2.4,<3", "slack_bolt>=1.21,<2", "matrix-nio>=0.24,<0.26"]
gateway = ["discord.py>=2.4,<3", "slack_bolt>=1.21,<2", "matrix-nio>=0.24,<0.26"]
honcho = ["honcho-ai>=1.0,<2"]
mem0 = ["mem0ai>=0.1,<0.3"]
memory = ["honcho-ai>=1.0,<2", "mem0ai>=0.1,<0.3"]
tokenizer = ["tiktoken>=0.7,<1"]
cli = []
cron = []
pty = []
web = []
mcp = ["mcp>=1.28,<2"]
acp = []
anthropic = []
google = []
youtube = []
azure-identity = []
bedrock = []
daytona = ["daytona>=0.192,<1"]
edge-tts = []
exa = []
fal = []
firecrawl = []
locales = []
markers = []
mistral = []
modal = ["modal>=1.5,<2"]
nemo-relay = []
parallel-web = []
plugins = []
py-modules = []
select = []
teams = []
termux = []
termux-all = []
tts-premium = []
vision = []
voice = []
dingtalk = []
feishu = []
homeassistant = []
sms = []
wecom = []
all = [
    "playwright>=1.46,<2", "pyautogui>=0.9.54,<1", "Pillow>=10,<12", "discord.py>=2.4,<3",
    "slack_bolt>=1.21,<2", "matrix-nio>=0.24,<0.26", "honcho-ai>=1.0,<2", "mem0ai>=0.1,<0.3",
    "tiktoken>=0.7,<1", "mcp>=1.28,<2", "daytona>=0.192,<1", "modal>=1.5,<2",
]

[project.scripts]
aegis = "aegis.cli.main:main"

[tool.ruff]
# Explicit lint scope so a clean local `ruff check aegis/` matches CI exactly.
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # uvicorn[standard] still imports the deprecated websockets.legacy module; not ours
    # to fix and harmless until websockets drops it (capped <17 in dependencies).
    "ignore:websockets.legacy is deprecated.*:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated.*:DeprecationWarning",
]

[tool.setuptools.packages.find]
include = ["aegis*", "agent*"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
aegis = ["builtin_skills/**/*", "desktop_app/**/*", "static/*", "static/web_dist/**/*",
         "tui_ink/dist/*", "tui_ink/package.json"]
