[package]
name = "aegis-bootstrap-installer"
version = "0.1.0"
edition = "2021"

[lib]
name = "aegis_bootstrap_installer"
path = "src/lib.rs"

[[bin]]
name = "aegis-bootstrap-installer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
